make/config/istio/gateway.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: acmesolver-istio
spec:
  controllerName: istio.io/gateway-controller

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: acmesolver
  namespace: istio-system
spec:
  gatewayClassName: acmesolver-istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
